<resources>
    <string name="app_name">CustomWorkoutApp</string>
    <string name="welcome_to_your_workout">Welcome to Your Workout!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_weight_lbs">Enter your weight (lbs)</string>
    <string name="inch_symbol">\"</string>
    <string name="inches">Inches</string>
    <string name="enter_your_fitness_goal">Enter your fitness goal</string>
    <string name="save">Save</string>
    <string name="app_logo">App logo</string>
    <string name="feet">Feet</string>
    <string name="power_rack">Power Rack</string>
    <string name="dumbbells">Dumbbells</string>
    <string name="barbell">Barbell</string>
    <string name="bench">Bench</string>
    <string name="resistance_bands">Resistance Bands</string>
    <string name="machines">Machines</string>
    <string name="cable_weights">Cable Weights</string>
    <string name="smith_machine">Smith Machine</string>
    <string name="next">Next</string>
</resources>