<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.customworkoutapp.ui.UserProfileSetupActivity">

    <!-- Name Input -->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Age Input -->
    <EditText
        android:id="@+id/et_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Weight Input -->
    <EditText
        android:id="@+id/et_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_weight_lbs"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/et_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Height Section (Feet and Inches) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/height_input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <!-- Input for feet -->
        <EditText
            android:id="@+id/et_feet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.4"
            android:layout_marginEnd="8dp"/>

        <!-- TextView for ' symbol -->
        <TextView
            android:id="@+id/feet_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="'"
            app:layout_constraintStart_toEndOf="@id/et_feet"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"/>

        <!-- Input for inches -->
        <EditText
            android:id="@+id/et_inches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/inches"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@id/feet_symbol"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.4"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <!-- TextView for " symbol -->
        <TextView
            android:id="@+id/inches_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inch_symbol"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/et_inches"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Save Button -->
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/height_input_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" /> <!-- Initially hidden -->

</androidx.constraintlayout.widget.ConstraintLayout>